added DBC approved banner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="content">
 
         <div class="intro" style="height: 100px;">
-          <h1>GEOFF CRITTENDEN</h1>
+          <h1>GEOFF CRITTENDEN</h1><span id="stamp">DBC APPROVED!</span>
           <p>Web Developer / Software Engineer</p>
         </div>
 
