added meta tag for viewport on about.html

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
+    <meta name="viewport" content="initial-scale=1">
     <title>About Me - Geoff Crittenden</title>
   </head>
 
