--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p>
             <form action="http://www.shur.ly/shurlyit" method="POST" target="_blank">
               <label>Need to shorten a URL? 
-                <input type="text" name="url" required placeholder="enter your url here" size="25" autofocus>
+                <input type="text" name="url" required placeholder="enter your url here" size="25">
               </label> 
               <input type="submit" value="Shurly It!">
             <span>(source <a href="https://github.com/GeoffCrittenden/shortly" target="_blank">here!</a>)</span>
