changed POST action for shurly due to NS issues

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div id="shurly">
           <p>
-            <form action="http://www.shur.ly/shurlyit" method="POST" target="_blank">
+            <form action="http://shurly.herokuapp.com/shurlyit" method="POST" target="_blank">
               <label>Need to shorten a URL? 
                 <input type="text" name="url" required placeholder="enter your url here" size="25">
               </label> 
