added target=_blank to DBC link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="content">
 
         <div class="intro" style="height: 100px;">
-          <h1>GEOFF CRITTENDEN</h1><span id="stamp"><a href="http://www.devbootcamp.com">DBC APPROVED!</a></span>
+          <h1>GEOFF CRITTENDEN</h1><span id="stamp"><a href="http://www.devbootcamp.com" target="_blank">DBC APPROVED!</a></span>
           <p>Web Developer / Software Engineer</p>
         </div>
 
