updated resume.html to replace slideshow with shurly

--- a/resume.html
+++ b/resume.html
@@ -30,15 +30,15 @@
           <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
           <p class="tech">Technology Used: Ruby on Rails, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin</p>
         </ul>
+        <h4><a href="http://www.shur.ly" target="_blank">shUR.Ly</a> | <a href="https://github.com/geoffcrittenden/shortly" target="_blank">GitHub Repo</a></h4>
+        <ul>
+          <p>A URL shortener optimized for mobile devices and deployed to Heroku.</p>
+          <p class="tech">Technology Used: Ruby, Sinatra, ActiveRecord, PostgreSQL, HTTP, Heroku</p>
+        </ul>
         <h4>Instant Meal Ordering | <a href="https://github.com/geoffcrittenden/qr_code" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Framework for a fast-food ordering app to expedite point-of-sale for restaurants.</p>
           <p class="tech">Technology Used: Ruby, Sinatra, API, JavaScript, AJAX, HTTP</p>
-        </ul>
-        <h4>ChromeCast Slideshow | <a href="https://github.com/geoffcrittenden/light-it-up" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>A test-driven slideshow application to display information on a ChromeCast homepage between casts.</p>
-          <p class="tech">Technology Used: Ruby on Rails, JavaScript, AJAX, BCrypt, RSpec, Travis, Capybara, Factory Girl</p>
         </ul>
     </div>
 
