updated citypulse entry on resume.html

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
-          <p class="tech">Technology Used: Ruby on Rails, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin</p>
+          <p class="tech">Technology Used: Ruby on Rails, JavaScript, ActiveRecord, PostgreSQL, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin, Heroku</p>
         </ul>
         <h4><a href="http://www.shur.ly" target="_blank">shUR.Ly</a> | <a href="https://github.com/geoffcrittenden/shortly" target="_blank">GitHub Repo</a></h4>
         <ul>
