updating resume.html

--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,11 @@
 
     <div class="recent">
       <h3>- RECENT PROJECTS -</h3>
+        <h4><a href="http://www.kultur.com" target="_blank">Kultur.com</a></h4>
+        <ul>
+          <p>E-commerce video streaming website built around a library of culturally signifcant titles, targeted to a refned audience of arts and culture patrons and afcionados.</p>
+          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MogoDB, PostgreSQL, ActiveRecord, APIs, Slim, Heroku</p>
+        </ul>
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
@@ -34,11 +39,6 @@
         <ul>
           <p>A URL shortener optimized for mobile devices and deployed to Heroku.</p>
           <p class="tech">Technology Used: Ruby, Sinatra, ActiveRecord, PostgreSQL, HTTP, Heroku</p>
-        </ul>
-        <h4>Instant Meal Ordering | <a href="https://github.com/geoffcrittenden/qr_code" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>Framework for a fast-food ordering app to expedite point-of-sale for restaurants.</p>
-          <p class="tech">Technology Used: Ruby, Sinatra, API, JavaScript, AJAX, HTTP</p>
         </ul>
     </div>
 
@@ -79,7 +79,7 @@
             <p>Decorated for actions over enemy territory by being awarded <a href="http://en.wikipedia.org/wiki/Air_Medal" target="_blank">Air Medal</a> with 'V'.</p>
           </ul>
     </div>
-
+    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
     </div>
   </body>
 </html>
