updated experience on resume.html

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         <h4><a href="http://www.kultur.com" target="_blank">Kultur.com</a></h4>
         <ul>
           <p>E-commerce video streaming website built around a library of culturally signifcant titles, targeted to a refned audience of arts and culture patrons and afcionados.</p>
-          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MogoDB, PostgreSQL, ActiveRecord, APIs, Slim, Heroku</p>
+          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MogoDB, PostgreSQL, ActiveRecord, Devise, Slim, Heroku</p>
         </ul>
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
@@ -61,6 +61,10 @@
 
     <div class="experience">
       <h3>- PREVIOUS PROFESSIONAL EXPERIENCE -</h3>
+        <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com">Big Astronaut</a><span class="year">2014 - Present</span></h4>
+        <ul>
+          <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release. Independently developed a personal application for periodic presentation and review.
+        </ul>
         <h4>Freelance Media Production | <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
           <ul>
             <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
@@ -69,7 +73,6 @@
           <ul>
             <p>Operated airborne camera and provided aviation support for military units in training.</p>
             <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
-            <p>Co-authored Naval Special Warfare (SEALs) unmanned aircraft systems operating instruction.</p>
           </ul>
         
         <h4>Naval Officer / Combat Aviator | <a href="http://www.navy.mil/" target="_blank">U.S. Navy</a><span class="year">2000 - 2008</span></h4>
