fixed typo in resume.html

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         <h4><a href="http://www.kultur.com" target="_blank">Kultur.com</a></h4>
         <ul>
           <p>E-commerce video streaming website built around a library of culturally signifcant titles, targeted to a refned audience of arts and culture patrons and afcionados.</p>
-          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MogoDB, PostgreSQL, ActiveRecord, Devise, Slim, Heroku</p>
+          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MongoDB, PostgreSQL, ActiveRecord, Devise, Slim, Heroku</p>
         </ul>
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
