--- a/resume.html
+++ b/resume.html
@@ -60,10 +60,16 @@
     </div>
 
     <div class="experience">
-      <h3>- PREVIOUS PROFESSIONAL EXPERIENCE -</h3>
-        <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com">Big Astronaut</a><span class="year">2014 - Present</span></h4>
+      <h3>- PROFESSIONAL EXPERIENCE -</h3>
+        <h4>Site Stability Engineer  |  <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2014 - Present</span></h4>
         <ul>
-          <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release. Independently developed a personal application for periodic presentation and review.
+          <p>Monitor site stability and performance, troubleshooting incident root causes.</p>
+          <p>Automate deployment, monitoring, management and incident response.</p>
+        </ul>
+        <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com" target="_blank">Big Astronaut</a><span class="year">2014</span></h4>
+        <ul>
+          <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release.</p>
+          <p>Independently developed a personal application for periodic presentation and review.</p>
         </ul>
         <h4>Freelance Media Production | <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
           <ul>
