disable shurly button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <label>Need to shorten a URL? 
                 <input type="text" name="url" required placeholder="enter your url here" size="25">
               </label> 
-              <input type="submit" value="Shurly It!">
+              <input type="submit" value="Shurly It!" disabled="disabled">
             <span>(source <a href="https://github.com/GeoffCrittenden/shortly" target="_blank">here!</a>)</span>
             <br><span style="color: red">Sorry, I had to disable this for now.  Working on web hosting issues.</span>
             </form>
