--- a/resume.html
+++ b/resume.html
@@ -1,103 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="resume.css">
-    <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
-    <title>Geoff Crittenden - Resume</title>
-  </head>
-
-  <body>
-    <div class="container">
-
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
-    <a id="pdf" href="resume.pdf">Download PDF</a>
-
-    <div class="topper">
-      <h1>GEOFFREY M. CRITTENDEN</h1>
-
-      <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt -at- gmail.com</span></p>
-
-      <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
-      <p class="skills">Agile Development | Ruby on Rails | Object-Oriented Design</p>
-      <p class="skills">PostgreSQL | TDD</p>
-    </div>
-
-    <div class="experience">
-      <h3>- PROFESSIONAL EXPERIENCE -</h3>
-      <h4>Sr. Software Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2016 - Present</span></h4>
-      <ul>
-        <p>Application development using Ruby on Rails (1/2/4/5) for large-scale, consumer-facing, financial technology products.</p>
-        <p>Experience with standing up RESTful API services for interfacing with existing, legacy applications and/or third-party cloud-based products.</p>
-      </ul>
-
-      <h4>Site Reliability Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2014 - 2016</span></h4>
-      <ul>
-        <p>Monitor site stability and performance, troubleshooting incident root causes.</p>
-        <p>Automate deployment, monitoring, management and incident response.</p>
-      </ul>
-
-      <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com" target="_blank">Big Astronaut</a><span class="year">2014</span></h4>
-      <ul>
-        <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release.</p>
-        <p>Independently developed a personal application for periodic presentation and review.</p>
-      </ul>
-
-      <h4>Freelance Media Production | <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
-      <ul>
-        <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
-      </ul>
-
-      <h4>Defense Contractor | <a href="http://www.broadbaygroup.com/" target="_blank">BroadBay Group, Inc.</a><span class="year">2008 - 2009</span></h4>
-      <ul>
-        <p>Operated airborne camera and provided aviation support for military units in training.</p>
-        <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
-      </ul>
-
-      <h4>Naval Officer / Combat Aviator | <a href="http://www.navy.mil/" target="_blank">U.S. Navy</a><span class="year">2000 - 2008</span></h4>
-      <ul>
-        <p>Amassed over 1400 tactical flight hours and 200 carrier arrested landings in both <a href="http://en.wikipedia.org/wiki/F-14_Tomcat" target="_blank">F-14A Tomcat</a> and <a href="http://en.wikipedia.org/wiki/Boeing_F/A-18E/F_Super_Hornet" target="_blank">F/A-18F Super Hornet</a> fighter aircraft.</p>
-        <p>Flew 36 combat missions in support of Operations <a href="http://en.wikipedia.org/wiki/Operation_Southern_Watch" target="_blank">SOUTHERN WATCH</a> and <a href="http://en.wikipedia.org/wiki/Operation_Iraqi_Freedom" target="_blank">IRAQI FREEDOM</a>.</p>
-        <p>Decorated for actions over enemy territory by being awarded <a href="http://en.wikipedia.org/wiki/Air_Medal" target="_blank">Air Medal</a> with 'V'.</p>
-      </ul>
-    </div>
-
-    <div class="recent">
-      <h3>- RECENT PROJECTS -</h3>
-        <h4><a href="http://www.kultur.com" target="_blank">Kultur.com</a></h4>
-        <ul>
-          <p>E-commerce video streaming website built around a library of culturally signifcant titles, targeted to a refned audience of arts and culture patrons and afcionados.</p>
-          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MongoDB, PostgreSQL, ActiveRecord, Devise, Slim, Heroku</p>
-        </ul>
-        <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
-          <p class="tech">Technology Used: Ruby on Rails, JavaScript, ActiveRecord, PostgreSQL, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin, Heroku</p>
-        </ul>
-        <h4><a href="http://www.shur.ly" target="_blank">shUR.Ly</a> | <a href="https://github.com/geoffcrittenden/shortly" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>A URL shortener optimized for mobile devices and deployed to Heroku.</p>
-          <p class="tech">Technology Used: Ruby, Sinatra, ActiveRecord, PostgreSQL, HTTP, Heroku</p>
-        </ul>
-    </div>
-
-    <div class="education">
-      <h3>- EDUCATION & TRAINING -</h3>
-        <h4><a href="http://devbootcamp.com" target="_blank">Dev Bootcamp</a> | Chicago, IL<span class="year">2013</span></h4>
-          <ul>
-            <p>Nine-week intensive web development course.</p>
-          </ul>
-        <h4>M.S., <a href="http://www.cdm.depaul.edu/academics/Pages/MSDigitalCinema.aspx" target="_blank">Digital Cinema</a> | <a href="http://depaul.edu/" target="_blank">DePaul University</a><span class="year">2012</span></h4> 
-          <ul>
-            <p>Film & TV production focusing on the independent filmmaking model.</p>
-          </ul>
-        <h4>B.S., <a href="http://aoss.engin.umich.edu/" target="_blank">Atmospheric, Oceanic & Space Sci.</a> | <a href="http://umich.edu/" target="_blank">U. of Michigan</a><span class="year">2000</span></h4>
-          <ul>
-            <p>Completed College of Engineering Core Curriculum.</p>
-            <p>Concentrated in atmospheric technology and space systems design.</p>
-          </ul>
-    </div>
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
-    </div>
-  </body>
-</html>
+<html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=RFda8w1V0eDZheqfcyQ4EGb3DKsRMD34dqg1gT8Z-p6isjtAVhoKeKPV_uAAgBOSk3k702ZOKiLJc3WVjuplzPesZW2xOQ-xsNqO47m55DA');.lst-kix_d52h1clnbs3c-5>li:before{content:"\0025a0  "}.lst-kix_d52h1clnbs3c-3>li:before{content:"\0025cf  "}.lst-kix_d52h1clnbs3c-2>li:before{content:"\0025a0  "}.lst-kix_d52h1clnbs3c-6>li:before{content:"\0025cf  "}.lst-kix_d52h1clnbs3c-1>li:before{content:"\0025cb  "}.lst-kix_d52h1clnbs3c-7>li:before{content:"\0025cb  "}.lst-kix_d52h1clnbs3c-0>li:before{content:"\00200b  "}.lst-kix_d52h1clnbs3c-8>li:before{content:"\0025a0  "}.lst-kix_3expns8knkd9-0>li:before{content:"\00200b  "}.lst-kix_3expns8knkd9-1>li:before{content:"\0025cb  "}ul.lst-kix_d52h1clnbs3c-5{list-style-type:none}ul.lst-kix_d52h1clnbs3c-6{list-style-type:none}.lst-kix_3expns8knkd9-3>li:before{content:"\0025cf  "}ul.lst-kix_d52h1clnbs3c-7{list-style-type:none}ul.lst-kix_d52h1clnbs3c-8{list-style-type:none}.lst-kix_3expns8knkd9-2>li:before{content:"\0025a0  "}.lst-kix_d52h1clnbs3c-4>li:before{content:"\0025cb  "}.lst-kix_3expns8knkd9-8>li:before{content:"\0025a0  "}.lst-kix_3expns8knkd9-7>li:before{content:"\0025cb  "}ul.lst-kix_d52h1clnbs3c-0{list-style-type:none}ul.lst-kix_d52h1clnbs3c-1{list-style-type:none}ul.lst-kix_d52h1clnbs3c-2{list-style-type:none}ul.lst-kix_d52h1clnbs3c-3{list-style-type:none}ul.lst-kix_d52h1clnbs3c-4{list-style-type:none}.lst-kix_3expns8knkd9-4>li:before{content:"\0025cb  "}.lst-kix_3expns8knkd9-5>li:before{content:"\0025a0  "}.lst-kix_3expns8knkd9-6>li:before{content:"\0025cf  "}ul.lst-kix_3expns8knkd9-2{list-style-type:none}ul.lst-kix_3expns8knkd9-1{list-style-type:none}ul.lst-kix_3expns8knkd9-4{list-style-type:none}ul.lst-kix_3expns8knkd9-3{list-style-type:none}ul.lst-kix_3expns8knkd9-0{list-style-type:none}ul.lst-kix_3expns8knkd9-6{list-style-type:none}ul.lst-kix_3expns8knkd9-5{list-style-type:none}ul.lst-kix_3expns8knkd9-8{list-style-type:none}ul.lst-kix_3expns8knkd9-7{list-style-type:none}ol{margin:0;padding:0}table td,table th{padding:0}.c22{border-right-style:solid;padding:7.2pt 7.2pt 7.2pt 7.2pt;border-bottom-color:#ffffff;border-top-width:0pt;border-right-width:0pt;border-left-color:#ffffff;vertical-align:top;border-right-color:#ffffff;border-left-width:0pt;border-top-style:solid;border-left-style:solid;border-bottom-width:0pt;width:358.5pt;border-top-color:#ffffff;border-bottom-style:solid}.c20{border-right-style:solid;padding:7.2pt 7.2pt 7.2pt 7.2pt;border-bottom-color:#ffffff;border-top-width:0pt;border-right-width:0pt;border-left-color:#ffffff;vertical-align:top;border-right-color:#ffffff;border-left-width:0pt;border-top-style:solid;border-left-style:solid;border-bottom-width:0pt;width:165pt;border-top-color:#ffffff;border-bottom-style:solid}.c4{color:#b7b7b7;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:9pt;font-family:"Georgia";font-style:normal}.c0{color:#666666;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:8pt;font-family:"Open Sans";font-style:normal}.c5{padding-top:5pt;padding-bottom:5pt;line-height:1.0;page-break-after:avoid;text-align:left;margin-right:15pt}.c17{padding-top:6pt;padding-bottom:0pt;line-height:1.0;text-align:left;margin-right:15pt;height:9pt}.c1{padding-top:16pt;padding-bottom:0pt;line-height:1.0;page-break-after:avoid;text-align:left;margin-right:15pt}.c23{padding-top:0pt;padding-bottom:6pt;line-height:1.0;text-align:left;margin-right:15pt}.c3{padding-top:30pt;padding-bottom:0pt;line-height:1.0;text-align:left;margin-right:15pt}.c7{padding-top:6pt;padding-bottom:0pt;line-height:1.3;text-align:left;margin-right:15pt}.c19{padding-top:16pt;padding-bottom:0pt;line-height:1.3;text-align:left;margin-right:15pt}.c14{padding-top:0pt;padding-bottom:0pt;line-height:1.15;text-align:left;margin-right:15pt}.c10{text-decoration:none;vertical-align:baseline;font-size:11pt;font-style:italic}.c12{text-decoration:none;vertical-align:baseline;font-size:10pt;font-style:normal}.c24{text-decoration:none;vertical-align:baseline;font-size:8pt;font-style:normal}.c8{text-decoration:none;vertical-align:baseline;font-size:36pt;font-style:normal}.c15{text-decoration:none;vertical-align:baseline;font-size:12pt;font-style:italic}.c9{text-decoration:none;vertical-align:baseline;font-size:9pt;font-style:normal}.c27{border-spacing:0;border-collapse:collapse;margin-right:auto}.c28{text-decoration:none;vertical-align:baseline;font-size:6pt;font-style:normal}.c2{font-family:"Georgia";color:#000000;font-weight:400}.c25{background-color:#ffffff;max-width:525.6pt;padding:28.8pt 43.2pt 43.2pt 43.2pt}.c6{font-weight:400;font-family:"Georgia"}.c13{color:#666666}.c18{height:588pt}.c21{font-style:italic}.c16{color:#2079c7}.c26{height:9pt}.c11{height:80pt}.title{padding-top:0pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Merriweather";line-height:1.0;text-align:left}.subtitle{padding-top:0pt;color:#000000;font-size:9pt;padding-bottom:0pt;font-family:"Open Sans";line-height:1.15;text-align:left}li{color:#666666;font-size:9pt;font-family:"Merriweather"}p{margin:0;color:#666666;font-size:9pt;font-family:"Merriweather"}h1{padding-top:30pt;color:#2079c7;font-weight:700;font-size:9pt;padding-bottom:0pt;font-family:"Open Sans";line-height:1.0;text-align:left}h2{padding-top:16pt;color:#000000;font-weight:700;font-size:11pt;padding-bottom:0pt;font-family:"Merriweather";line-height:1.0;page-break-after:avoid;text-align:left}h3{padding-top:5pt;color:#666666;font-size:8pt;padding-bottom:5pt;font-family:"Open Sans";line-height:1.0;page-break-after:avoid;text-align:left}h4{padding-top:8pt;-webkit-text-decoration-skip:none;color:#666666;text-decoration:underline;text-decoration-skip-ink:none;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.3;page-break-after:avoid;text-align:left}h5{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.3;page-break-after:avoid;text-align:left}h6{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.3;page-break-after:avoid;font-style:italic;text-align:left}</style></head><body class="c25"><p class="c17"><span class="c6 c13 c28"></span></p><a id="t.fe793bc2d66411360fa9ce8d760254ee107f2ccf"></a><a id="t.0"></a><table class="c27"><tbody><tr class="c11"><td class="c22" colspan="1" rowspan="1"><p class="c23 title" id="h.x8fm1uorkbaw"><span class="c2 c8">Geoff Crittenden</span></p><p class="c14 subtitle" id="h.ymi089liagec"><span class="c2 c12">Experienced Senior Software Engineer &amp; Former Naval Officer/Aviator</span></p></td><td class="c20" colspan="1" rowspan="1"><p class="c14"><span class="c9 c2">959 W 37th St Unit 6</span></p><p class="c14"><span class="c9 c2">Chicago, IL 60609</span></p><p class="c14"><span class="c9 c2">(312) 485-6300</span></p><p class="c14"><span class="c2 c9">geoffcritt@gmail.com</span></p></td></tr><tr class="c18"><td class="c22" colspan="1" rowspan="1"><h1 class="c3" id="h.y7d3xdxnr44m"><span class="c9 c6 c16">EXPERIENCE</span></h1><h2 class="c1" id="h.rfgvkg2ifhfd"><span class="c6">Enova International</span><span class="c2">, </span><span class="c6">Chicago, IL &mdash; </span><span class="c6 c21">Sr. Software Engineer</span></h2><h3 class="c5" id="h.n64fgzu3lwuy"><span class="c6">Nov 2016 - Present</span></h3><h2 class="c1" id="h.wj0puh61kxsr"><span class="c6">Enova International, Chicago, IL &mdash; </span><span class="c10 c2">Sr. Site Reliability Engineer</span></h2><h3 class="c5" id="h.ndth1k59lr9b"><span class="c6">Jul 2014 - Nov 2016</span></h3><h2 class="c1" id="h.nlwpbmg6w5vy"><span class="c6">Big Astronaut</span><span class="c2">, </span><span class="c6">Chicago, IL &mdash; </span><span class="c2 c10">Software Engineer Apprentice</span></h2><h3 class="c5" id="h.8hk593fs3sag"><span class="c6">Apr</span><span class="c24 c6 c13">&nbsp;2014 - Jun 2014</span></h3><h2 class="c1" id="h.1hxcpsc1hco2"><span class="c6">Dev Bootcamp, Chicago, IL &mdash; </span><span class="c10 c2">Teaching Assistant</span></h2><h3 class="c5" id="h.ybypdmed418m"><span class="c6">Oct 2013 - Mar 2014</span></h3><h2 class="c1" id="h.f4cg7v2oda47"><span class="c6">Freelance Video Production, Chicago, IL &mdash; </span><span class="c10 c2">Various Positions</span></h2><h3 class="c5" id="h.8irreorxxk8b"><span class="c6">Aug 2009 - Aug 2013</span></h3><h2 class="c1" id="h.6z284outta4"><span class="c6">Broadbay Group, Inc., Virginia Beach, VA &mdash; </span><span class="c10 c2">Defense Contractor</span></h2><h3 class="c5" id="h.desp30agxcxq"><span class="c6">Dec 2008 - Jul 2009</span></h3><h2 class="c1" id="h.ca50plcibr21"><span class="c6">U. S. Navy, Various &mdash; </span><span class="c10 c2">Naval Officer / Combat Aviator / Flight Instructor</span></h2><h3 class="c5" id="h.6e6w7ewrbvwl"><span class="c6">Apr</span><span class="c6 c13 c24">&nbsp;2000 - Oct 2008</span></h3><h1 class="c3" id="h.yk8luflkpwij"><span class="c6">EDUCATION</span></h1><h2 class="c1" id="h.6wymnhinx9q5"><span class="c6">Dev Bootcamp</span><span class="c6">, Chicago, IL &mdash; </span><span class="c10 c2">Web Development</span></h2><h3 class="c5" id="h.7vtcyzeczjot"><span class="c6">Aug 2013 - Oct 2013</span></h3><h2 class="c1" id="h.czfiadnsgnzp"><span class="c6">DePaul University</span><span class="c6">, Chicago, IL &mdash; </span><span class="c10 c2">M.S. Digital Cinema Production (College of Computing &amp; Digital Media), with distinction</span></h2><h3 class="c5" id="h.miiyt1y6sl7g"><span class="c6">Aug 2009 - Jun 2012</span></h3><h2 class="c1" id="h.4dmfgb5vriu9"><span class="c6">University of Michigan, Ann Arbor, MI &mdash; </span><span class="c10 c2">B.S. Atmospheric, Oceanic, &amp; Space Sciences (College of Engineering)</span></h2><h3 class="c5" id="h.jswinu2b8rka"><span class="c6">Sep</span><span class="c24 c6 c13">&nbsp;1996 - Apr 2000</span></h3></td><td class="c20" colspan="1" rowspan="1"><h1 class="c3" id="h.ca0awj8022e2"><span class="c9 c6 c16">TECHNOLOGIES</span></h1><p class="c19"><span class="c9 c6 c13">Ruby on Rails, Javascript, Go, SQL</span></p><p class="c7"><span class="c9 c6 c13">Linux, PostgreSQL, Puma, Unicorn, Chef</span></p><p class="c7"><span class="c9 c6 c13">Git, GitHub, Jenkins, JIRA Agile, Pivotal Tracker</span></p><p class="c7"><span class="c9 c6 c13">Zendesk, JIRA Software, PagerDuty, VictorOps, Splunk, Sentry</span></p><h1 class="c3" id="h.g0dgamfivmi0"><span class="c9 c6 c16">SKILLS</span></h1><p class="c19"><span class="c9 c6 c13">Agile, Object-Oriented Design, Test-Driven Development</span></p><p class="c7"><span class="c9 c6 c13">Application Architecture, Project Management &amp; Planning</span></p><p class="c7"><span class="c9 c6 c13">Automation, Monitoring, Root Cause Analysis, Incident Management</span></p><p class="c7"><span class="c9 c6 c13">Leadership, Management, Mentorship, Effective Communication, Critical Thinking</span></p></td></tr></tbody></table><p class="c7 c26"><span class="c9 c6 c13"></span></p></body></html>
