resume html and css updates

--- a/resume.html
+++ b/resume.html
@@ -9,95 +9,97 @@
 
   <body>
     <div class="container">
+      <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+      <a id="pdf" href="resume.pdf">Download PDF</a>
 
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
-    <a id="pdf" href="resume.pdf">Download PDF</a>
+      <div class="topper">
+        <h1>GEOFFREY M. CRITTENDEN</h1>
 
-    <div class="topper">
-      <h1>GEOFFREY M. CRITTENDEN</h1>
+        <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt -at- gmail.com</span></p>
 
-      <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt -at- gmail.com</span></p>
+        <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
+        <h3 class="description">Experienced Senior Software Engineer & Former Naval Officer/Combat Aviator</h3>
+      </div>
 
-      <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
-      <p class="skills">Agile Development | Ruby on Rails | Object-Oriented Design</p>
-      <p class="skills">PostgreSQL | TDD</p>
-    </div>
-
-    <div class="experience">
-      <h3>- PROFESSIONAL EXPERIENCE -</h3>
-      <h4>Sr. Software Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2016 - Present</span></h4>
-      <ul>
-        <p>Application development using Ruby on Rails (1/2/4/5) for large-scale, consumer-facing, financial technology products.</p>
-        <p>Experience with standing up RESTful API services for interfacing with existing, legacy applications and/or third-party cloud-based products.</p>
-      </ul>
-
-      <h4>Site Reliability Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2014 - 2016</span></h4>
-      <ul>
-        <p>Monitor site stability and performance, troubleshooting incident root causes.</p>
-        <p>Automate deployment, monitoring, management and incident response.</p>
-      </ul>
-
-      <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com" target="_blank">Big Astronaut</a><span class="year">2014</span></h4>
-      <ul>
-        <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release.</p>
-        <p>Independently developed a personal application for periodic presentation and review.</p>
-      </ul>
-
-      <h4>Freelance Media Production | <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
-      <ul>
-        <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
-      </ul>
-
-      <h4>Defense Contractor | <a href="http://www.broadbaygroup.com/" target="_blank">BroadBay Group, Inc.</a><span class="year">2008 - 2009</span></h4>
-      <ul>
-        <p>Operated airborne camera and provided aviation support for military units in training.</p>
-        <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
-      </ul>
-
-      <h4>Naval Officer / Combat Aviator | <a href="http://www.navy.mil/" target="_blank">U.S. Navy</a><span class="year">2000 - 2008</span></h4>
-      <ul>
-        <p>Amassed over 1400 tactical flight hours and 200 carrier arrested landings in both <a href="http://en.wikipedia.org/wiki/F-14_Tomcat" target="_blank">F-14A Tomcat</a> and <a href="http://en.wikipedia.org/wiki/Boeing_F/A-18E/F_Super_Hornet" target="_blank">F/A-18F Super Hornet</a> fighter aircraft.</p>
-        <p>Flew 36 combat missions in support of Operations <a href="http://en.wikipedia.org/wiki/Operation_Southern_Watch" target="_blank">SOUTHERN WATCH</a> and <a href="http://en.wikipedia.org/wiki/Operation_Iraqi_Freedom" target="_blank">IRAQI FREEDOM</a>.</p>
-        <p>Decorated for actions over enemy territory by being awarded <a href="http://en.wikipedia.org/wiki/Air_Medal" target="_blank">Air Medal</a> with 'V'.</p>
-      </ul>
-    </div>
-
-    <div class="recent">
-      <h3>- RECENT PROJECTS -</h3>
-        <h4><a href="http://www.kultur.com" target="_blank">Kultur.com</a></h4>
+      <div class="experience">
+        <h3>- PROFESSIONAL EXPERIENCE -</h3>
+        <h4>Sr. Software Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2016 - Present</span></h4>
         <ul>
-          <p>E-commerce video streaming website built around a library of culturally signifcant titles, targeted to a refned audience of arts and culture patrons and afcionados.</p>
-          <p class="tech">Technology Used: Ruby on Rails, BatmanJS, MongoDB, PostgreSQL, ActiveRecord, Devise, Slim, Heroku</p>
+          <p>Application development using Ruby on Rails (1/2/4/5) for large-scale, consumer-facing, financial technology products.</p>
+          <p>Experience with standing up RESTful API services for interfacing with existing, legacy applications and/or third-party cloud-based products.</p>
         </ul>
-        <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
-          <p class="tech">Technology Used: Ruby on Rails, JavaScript, ActiveRecord, PostgreSQL, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin, Heroku</p>
-        </ul>
-        <h4><a href="http://www.shur.ly" target="_blank">shUR.Ly</a> | <a href="https://github.com/geoffcrittenden/shortly" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>A URL shortener optimized for mobile devices and deployed to Heroku.</p>
-          <p class="tech">Technology Used: Ruby, Sinatra, ActiveRecord, PostgreSQL, HTTP, Heroku</p>
-        </ul>
-    </div>
 
-    <div class="education">
-      <h3>- EDUCATION & TRAINING -</h3>
-        <h4><a href="http://devbootcamp.com" target="_blank">Dev Bootcamp</a> | Chicago, IL<span class="year">2013</span></h4>
-          <ul>
-            <p>Nine-week intensive web development course.</p>
-          </ul>
-        <h4>M.S., <a href="http://www.cdm.depaul.edu/academics/Pages/MSDigitalCinema.aspx" target="_blank">Digital Cinema</a> | <a href="http://depaul.edu/" target="_blank">DePaul University</a><span class="year">2012</span></h4> 
-          <ul>
-            <p>Film & TV production focusing on the independent filmmaking model.</p>
-          </ul>
-        <h4>B.S., <a href="http://aoss.engin.umich.edu/" target="_blank">Atmospheric, Oceanic & Space Sci.</a> | <a href="http://umich.edu/" target="_blank">U. of Michigan</a><span class="year">2000</span></h4>
-          <ul>
-            <p>Completed College of Engineering Core Curriculum.</p>
-            <p>Concentrated in atmospheric technology and space systems design.</p>
-          </ul>
-    </div>
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+        <h4>Sr. Site Reliability Engineer | <a href="http://www.enova.com" target="_blank">Enova</a><span class="year">2014 - 2016</span></h4>
+        <ul>
+          <p>Monitor site stability and performance, troubleshooting incident root causes.</p>
+          <p>Automate deployment, monitoring, management and incident response.</p>
+        </ul>
+
+        <h4>Software Engineering Apprentice | <a href="http://www.bigastronaut.com" target="_blank">Big Astronaut</a><span class="year">2014</span></h4>
+        <ul>
+          <p>Worked as a junior engineer on a team developing applications for clients. Implemented features and bug fixes as well as performed QA testing of features prior to release.</p>
+          <p>Independently developed a personal application for periodic presentation and review.</p>
+        </ul>
+
+        <h4>Freelance Media Production | <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
+        <ul>
+          <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
+        </ul>
+
+        <h4>Defense Contractor | <a href="http://www.broadbaygroup.com/" target="_blank">BroadBay Group, Inc.</a><span class="year">2008 - 2009</span></h4>
+        <ul>
+          <p>Operated airborne camera and provided aviation support for military units in training.</p>
+          <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
+        </ul>
+
+        <h4>Naval Officer / Combat Aviator | <a href="http://www.navy.mil/" target="_blank">U.S. Navy</a><span class="year">2000 - 2008</span></h4>
+        <ul>
+          <p>Amassed over 1400 tactical flight hours and 200 carrier arrested landings in both <a href="http://en.wikipedia.org/wiki/F-14_Tomcat" target="_blank">F-14A Tomcat</a> and <a href="http://en.wikipedia.org/wiki/Boeing_F/A-18E/F_Super_Hornet" target="_blank">F/A-18F Super Hornet</a> fighter aircraft.</p>
+          <p>Flew 36 combat missions in support of Operations <a href="http://en.wikipedia.org/wiki/Operation_Southern_Watch" target="_blank">SOUTHERN WATCH</a> and <a href="http://en.wikipedia.org/wiki/Operation_Iraqi_Freedom" target="_blank">IRAQI FREEDOM</a>.</p>
+          <p>Decorated for actions over enemy territory by being awarded <a href="http://en.wikipedia.org/wiki/Air_Medal" target="_blank">Air Medal</a> with 'V'.</p>
+        </ul>
+      </div>
+
+      <div class="education">
+        <h3>- EDUCATION & TRAINING -</h3>
+          <h4><a href="http://devbootcamp.com" target="_blank">Dev Bootcamp</a> | Chicago, IL<span class="year">2013</span></h4>
+            <ul>
+              <p>Nine-week intensive web development course.</p>
+            </ul>
+          <h4>M.S., <a href="http://www.cdm.depaul.edu/academics/Pages/MSDigitalCinema.aspx" target="_blank">Digital Cinema</a> | <a href="http://depaul.edu/" target="_blank">DePaul University</a><span class="year">2012</span></h4> 
+            <ul>
+              <p>Film & TV production focusing on the independent filmmaking model.</p>
+              <p>Graduated with distinction.</p>
+            </ul>
+          <h4>B.S., <a href="https://clasp.engin.umich.edu" target="_blank">Atmospheric, Oceanic & Space Sci.</a> | <a href="http://umich.edu/" target="_blank">Univ. of Michigan</a><span class="year">2000</span></h4>
+            <ul>
+              <p>Completed College of Engineering Core Curriculum.</p>
+              <p>Concentrated in atmospheric technology and space systems design.</p>
+            </ul>
+      </div>
+
+      <div class="skills">
+        <h3>- TECHNOLOGIES -</h3>
+        <h4>Ruby on Rails | Javascript | Go | SQL</h4>
+        <h4>Linux | PostgreSQL | Puma | Unicorn | Chef</h4>
+        <h4>Git | GitHub | Jenkins | JIRA Agile | Pivotal Tracker</h4>
+        <h4>Zendesk | JIRA Software | PagerDuty | VictorOps | Splunk | Sentry</h4>
+      </div>
+
+      <div class="skills">
+        <h3>- SKILLS -</h3>
+        <h4>Agile | Object-Oriented Design | Test-Driven Development</h4>
+        <h4>Application Architecture | Project Management & Planning</h4>
+        <h4>Automation | Monitoring | Root Cause Analysis | Incident Management</h4>
+        <h4>Leadership | Management | Mentorship | Effective Communication | Critical Thinking</h4>
+      </div>
+
+      <div class="interests">
+        <h3>- INTERESTS -</h3>
+        <h4>Deep-Dish Pizza | Burritos</h4>
+        <h4>Fantasy Football | Copper Age Marvel Comic Books</h4>
+      </div>
+      <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
     </div>
   </body>
 </html>
