--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 
         <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt -at- gmail.com</span></p>
 
-        <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
+        <h2 class="title">SOFTWARE ENGINEER / WEB DEVELOPER</h2>
         <h3 class="description">Experienced Senior Software Engineer & Former Naval Officer/Combat Aviator</h3>
       </div>
 
