--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="intro" style="height: 100px;">
           <h1>GEOFF CRITTENDEN</h1><span id="stamp"><a href="http://www.devbootcamp.com" target="_blank">DBC APPROVED!</a></span>
-          <p>Web Developer / Software Engineer</p>
+          <p>Software Engineer / Web Developer</p>
         </div>
 
         <div class="border"></div>
