--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="feature">
             <h2>Land that <a href="https://mydreamjob.herokuapp.com" target="_blank">Dream Job!</a></h2>
             <p>Dream Job is a simple alerts API that scrapes the job listings of your favorite company/companies and sends an sms alert if the job you want becomes available.</p>
-            <p>It is configurable entirely via environment variables, so it is easily pointed to another site, without needing a deployment, if your dream is no longer available.</p>
+            <p>It is configurable entirely via environment variables, so it is easily pointed to another site, without needing a deployment, if your dream job is no longer available.</p>
             <p>This was also my first side project that was developed by strictly adhering to TDD.  Test coverage never dropped below 100%</p>
             <span><a href="https://github.com/GeoffCrittenden/dream_job" target="_blank">Source Code</a></span>
           </div>
